crates/parser/src/tests/snapshots/kcl_parser__tests__ast__basic_stmt.snap
---
source: crates/parser/src/tests/ast.rs
expression: "$crate :: tests ::\nparsing_file_ast_json(\"hello.k\",\nr####\"\n# comment1\na = 1\n# comment22\nb = 2\n# comment333\nc = 3 # comment4444\n    \"####)"
---
{
  "filename": "hello.k",
  "doc": null,
  "body": [
    {
      "node": {
        "type": "Assign",
        "targets": [
          {
            "node": {
              "name": {
                "node": "a",
                "filename": "hello.k",
                "line": 3,
                "column": 0,
                "end_line": 3,
                "end_column": 1
              },
              "paths": [],
              "pkgpath": ""
            },
            "filename": "hello.k",
            "line": 3,
            "column": 0,
            "end_line": 3,
            "end_column": 1
          }
        ],
        "value": {
          "node": {
            "type": "NumberLit",
            "binary_suffix": null,
            "value": {
              "type": "Int",
              "value": 1
            }
          },
          "filename": "hello.k",
          "line": 3,
          "column": 4,
          "end_line": 3,
          "end_column": 5
        },
        "ty": null
      },
      "filename": "hello.k",
      "line": 3,
      "column": 0,
      "end_line": 3,
      "end_column": 5
    },
    {
      "node": {
        "type": "Assign",
        "targets": [
          {
            "node": {
              "name": {
                "node": "b",
                "filename": "hello.k",
                "line": 5,
                "column": 0,
                "end_line": 5,
                "end_column": 1
              },
              "paths": [],
              "pkgpath": ""
            },
            "filename": "hello.k",
            "line": 5,
            "column": 0,
            "end_line": 5,
            "end_column": 1
          }
        ],
        "value": {
          "node": {
            "type": "NumberLit",
            "binary_suffix": null,
            "value": {
              "type": "Int",
              "value": 2
            }
          },
          "filename": "hello.k",
          "line": 5,
          "column": 4,
          "end_line": 5,
          "end_column": 5
        },
        "ty": null
      },
      "filename": "hello.k",
      "line": 5,
      "column": 0,
      "end_line": 5,
      "end_column": 5
    },
    {
      "node": {
        "type": "Assign",
        "targets": [
          {
            "node": {
              "name": {
                "node": "c",
                "filename": "hello.k",
                "line": 7,
                "column": 0,
                "end_line": 7,
                "end_column": 1
              },
              "paths": [],
              "pkgpath": ""
            },
            "filename": "hello.k",
            "line": 7,
            "column": 0,
            "end_line": 7,
            "end_column": 1
          }
        ],
        "value": {
          "node": {
            "type": "NumberLit",
            "binary_suffix": null,
            "value": {
              "type": "Int",
              "value": 3
            }
          },
          "filename": "hello.k",
          "line": 7,
          "column": 4,
          "end_line": 7,
          "end_column": 5
        },
        "ty": null
      },
      "filename": "hello.k",
      "line": 7,
      "column": 0,
      "end_line": 7,
      "end_column": 5
    }
  ],
  "comments": [
    {
      "node": {
        "text": "# comment1"
      },
      "filename": "hello.k",
      "line": 2,
      "column": 0,
      "end_line": 2,
      "end_column": 10
    },
    {
      "node": {
        "text": "# comment22"
      },
      "filename": "hello.k",
      "line": 4,
      "column": 0,
      "end_line": 4,
      "end_column": 11
    },
    {
      "node": {
        "text": "# comment333"
      },
      "filename": "hello.k",
      "line": 6,
      "column": 0,
      "end_line": 6,
      "end_column": 12
    },
    {
      "node": {
        "text": "# comment4444"
      },
      "filename": "hello.k",
      "line": 7,
      "column": 6,
      "end_line": 7,
      "end_column": 19
    }
  ]
}
